# m5-forecasting

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt
notebooks/: 01_eda.ipynb
src/m5_forecasting/backtest/: rolling.py
src/m5_forecasting/data/: ingest.py
src/m5_forecasting/experiments/: baseline_lgbm.py  baseline_weekday_quantile.py
src/m5_forecasting/pipelines/: flows.py
src/m5_forecasting/utils/: io.py  logging.py  metrics.py
tests/: test_ingest_counts.py  test_metrics.py  test_unpivot_sales.py
